Fixed profile panel z-index

--- a/sources/css/storybookPlus.scss
+++ b/sources/css/storybookPlus.scss
@@ -865,6 +865,7 @@ p {
 	left: 0;
 	@include clear;
 	@include box-sizing( border-box );
+	z-index: 20;
 	
 	.photo {
 	
